<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/location_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/location"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/activity_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/activity"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/geofence_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/geofence"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="normal|bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/view_on_map"
            android:id="@+id/start_location"
            android:layout_weight="1"
            android:background="@color/colorPrimary" />


    </LinearLayout>

</LinearLayout>