<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pupils.com.pupils.MainActivity">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/ManageKids"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textSize="30sp"
            android:paddingTop="20dp"
            android:paddingBottom="100dp"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_kids_location"
            android:padding="20dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/locate"
            android:background="@color/colorPrimary"
            android:elevation="5dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_kid_info"
            android:padding="20dp"
            android:id="@+id/add_kid"
            android:background="@color/colorPrimary"
            android:elevation="5dp" />

</LinearLayout>
